chore: updated api paths and added better error handling
